# genomic_interval_pipeline

./: Cargo.toml  README.md
data/: file1.bed  file2.bed  metadata.txt  metadata_custom.txt
src/: main.rs
