[package]
name = "make_training_data"
version = "0.1.0"
authors = ["Christopher Cole <ccole@well.ox.ac.uk>"]
edition = "2018"

[dependencies]
structopt = "0.3.14"
log = "0.4"
env_logger = "0.7.1"
rust-htslib = "*"
theban_interval_tree = "0.7.1"
memrange = "0.1.3"
hdf5 = "0.7.0"
ndarray = "0.13.1"
pbr = "1.0.3"
flate2 = "1.0.19"
