[package]
name = "genomic_interval_pipeline"
version = "0.1.0"
authors = ["Christopher Cole <ccole@well.ox.ac.uk>"]
description =  "A pipeline for creating HDF5 databases from genomic intervals."
homepage = "https://github.com/Chris1221/genomic_interval_pipeline"
repository = "https://github.com/Chris1221/genomic_interval_pipeline"
license = "MIT"
edition = "2018"
keywords = ["genetics", "genomics", "HDF5", "keras", "intervals"]
categories = ["command-line-utilities", "database", "science", ]
readme = "README.md"

[dependencies]
structopt = "0.3.14"
log = "0.4"
env_logger = "0.7.1"
rust-htslib = "0.35.2"
theban_interval_tree = "0.7.1"
memrange = "0.1.3"
hdf5 = "0.7.0"
ndarray = "0.13.1"
pbr = "1.0.3"
flate2 = "1.0.19"
